[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/FolderofDownloads/platform_metroidvania asset pack v1.01/miscellaneous sprites/coin_anim_strip_6.png" type="Texture" id=1]
[ext_resource path="res://Sprites/FolderofDownloads/platform_metroidvania asset pack v1.01/miscellaneous sprites/coin_pickup_anim_strip_6.png" type="Texture" id=2]
[ext_resource path="res://other/soundsandmusic/sounds/confirmation_002.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Normalcoin.gd" type="Script" id=17]

[sub_resource type="Animation" id=3]
resource_name = "CoinTurn"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "CoinPickup"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45.5, 51 )

[node name="NormalCoin" type="Node2D"]
scale = Vector2( 0.15, 0.15 )
script = ExtResource( 17 )

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2"]
anims/CoinTurn = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -36.3636 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite3"]
anims/CoinPickup = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="Collect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collect"]
position = Vector2( 1.5, 1 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0

[connection signal="body_entered" from="Collect" to="." method="_on_Collect_body_entered"]
